[package]
name = "g14-perf-control"
version = "0.1.0"
authors = ["Andreas Streichardt <andreas@mop.koeln>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rog_fan_curve = { version = "0.1", features = ["serde"] }
procfs = "0.8.1"
structopt = "0.3"
anyhow = "1.0"